# FindingStar

./: .gitignore  README.md
Final_Game/: Final_Game.sln
Final_Game/Debug/: Final_Game.ilk
final/: AnimatedObject.cpp  AnimatedObject.h  Animation.cpp  Animation.h  Basic.h  CMakeLists.txt  Collision.cpp  Collision.h  FinalGame.sln  FinalGame.vcxproj  FinalGame.vcxproj.filters  Game.cpp  Game.h  Item.cpp  Item.h  Makefile  Model.cpp  Model.h  ModelImporter.cpp  ModelImporter.h  Player.cpp  Player.h  Skybox.cpp  Skybox.h  Table.cpp  Table.h  TextRenderer.cpp  TextRenderer.h  Utils.cpp  Utils.h  game  main.cpp
final/Debug/: FinalGame.ilk
final/Debug/FinalGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FinalGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
final/models/: Cylinder.mtl  Key_Body.mtl  Lock.mtl  Photo_Front.mtl  Pic_1.mtl  Shelf_Body.mtl  Stack_Middle.mtl  blender_exporter  bookshelf.blend  bookshelf.blend1  bookshelf.mtl  bookshelf_door.blend  bookshelf_door.blend1  bookshelf_door.mtl  desk.blend  desk.blend1  desk.mtl  drawer.blend  drawer.blend1  drawer.mtl  floor.txt  key.blend  key.blend1  photo.blend  photo.blend1  photo.mtl  room.blend  room.blend1  room.mtl  room_door.blend  room_door.blend1  room_door.mtl  untitled.blend1
final/models/BookShelf/: Stack_Bottom.mtl  Stack_Top.mtl
final/models/Room/: Cube.001.mtl  Cube.mtl  Window.mtl
final/shaders/: blinnPhong.frag  blinnPhong.vert  font.frag  font.vert  skybox.frag  skybox.vert  textured-Fragment.glsl  textured-Vertex.glsl
(+10 files in other folders)
